implemented pipe service

--- a/src/app/components/bookDetail/book-detail/book-detail.component.html
+++ b/src/app/components/bookDetail/book-detail/book-detail.component.html
@@ -36,26 +36,18 @@
             <br>
             <div class="feedback-cnt">
                 <div>
-                    Overall Rating
-                    <br>
+                    Overall Rating<br>
                     <div class="star_icon">
-                        <mat-icon svgIcon="star_icon_black" aria-hidden="false"
-                            aria-label="heart SVG icon"></mat-icon>
-                        <mat-icon svgIcon="star_icon_black" aria-hidden="false"
-                            aria-label="heart SVG icon"></mat-icon>
-                        <mat-icon svgIcon="star_icon_black" aria-hidden="false"
-                            aria-label="heart SVG icon"></mat-icon>
-                        <mat-icon svgIcon="star_icon_black" aria-hidden="false"
-                            aria-label="heart SVG icon"></mat-icon>
-                        <mat-icon svgIcon="star_icon_black" aria-hidden="false"
-                            aria-label="heart SVG icon"></mat-icon>
+                        <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
+                        <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
+                        <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
+                        <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
+                        <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
                     </div>
                   </div>
-           
             <div class="input">
               <input type="text" placeholder="Write your review">
-              <div class="submit-btn">
-                  <br>
+              <div class="submit-btn"><br>
                   <button mat-raised-button color="primary">SUBMIT</button>
               </div>
           </div>
@@ -74,8 +66,7 @@
           </div>
           <div>
               <br>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt rem asperiores similique
-              magni deserunt quos, fugit itaque? Mollitia, nostrum? Distinctio perferendis neque fuga eligendi est
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt rem asperiores similiquemagni deserunt quos, fugit itaque? Mollitia, nostrum? Distinctio perferendis neque fuga eligendi est
           </div>
           <div class="name-cnt">
               <div class="name"> SS </div>
@@ -85,14 +76,13 @@
               <mat-icon svgIcon="star_icon_yellow" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
               <mat-icon svgIcon="star_icon_yellow" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
               <mat-icon svgIcon="star_icon_yellow" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
-              <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
+              <mat-icon svgIcon="star_icon_yellow" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
               <mat-icon svgIcon="star_icon_black" aria-hidden="false" aria-label="heart SVG icon"></mat-icon>
           </div>
           <div>
               <br>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt rem asperiores similique
-              magni deserunt quos, fugit itaque? Mollitia, nostrum? Distinctio perferendis neque fuga eligendi est
-              <br><br><br><br><br><br><br><br><br>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam nesciunt rem asperiores similiquemagni deserunt quos, fugit itaque? Mollitia, nostrum? Distinctio perferendis neque fuga eligendi est
+              <br><br><br><br><br>
           </div>
         </div>
     </div>
