--- a/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.html
+++ b/src/app/components/bookstore-header/bookstore-header/bookstore-header.component.html
@@ -1,8 +1,8 @@
 <div class="header-main-cnt">
     <div class="header">
-        <div class="bookstore-icon" routerLink="/books">
-            <img src="assets/education.png" alt="Image not found">
-            <span>BookStore</span>
+        <div class="bookstore-icon">
+            <img src="assets/education.png" alt="Image not found" routerLink="/books">
+            <span routerLink="/books">BookStore</span>
         </div>
 
         <div class="search-container">
