--- a/src/app/components/orderPlaced/orderplaced/orderplaced.component.html
+++ b/src/app/components/orderPlaced/orderplaced/orderplaced.component.html
@@ -7,9 +7,9 @@
             <span class="email">Email us</span><span>Contact us</span><span>Address</span>
        </div>
        <div class="user-detail-main">
-        <div class="details"> <span>{{orderDetail[0].email}}</span></div>
-        <div class="details"> <span>{{orderDetail[0].addressMobileNumber}}</span></div>
-        <div class="details"> <span>{{orderDetail[0].address}}, {{orderDetail[0].city}}, {{orderDetail[0].state}}</span></div>
+        <div class="details"> <span>premkumar@gmail.com</span></div>
+        <div class="details"> <span>76359867948</span></div>
+        <div class="details"> <span>3/54 dharmapuri,tamilnadu-643783</span></div>
        </div>
     </div>
     <button mat-raised-button color="primary" class="continue-btn" routerLink="/books">CONTINUE SHOPPING</button>
