--- a/src/app/components/customerDetails/customer-details/customer-details.component.html
+++ b/src/app/components/customerDetails/customer-details/customer-details.component.html
@@ -1,4 +1,4 @@
-<div class="back-to-dashbaord">
+<!-- <div class="back-to-dashbaord">
     <a><strong routerLink="/books">Home</strong><span> /CartList </span></a>
 </div>
 
@@ -25,18 +25,18 @@
             <span class="sellingprice">Rs.{{cartList.price}}
               <span class="originalprice">Rs.1999</span>
             </span>
-            <div class="count">
+             <div class="count">
               <span class="symbol" (click)="decreaseCount(cartList)">-</span>
               <span class="countvalue">{{cartList.bookQuantity}}</span>
               <span class="symbol" (click)="increaseCount(cartList)">+</span>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
-  <div class="address-detail">
+  <!-- <div class="address-detail">
     <div class="list-of-adderss">
       <div class="address-header">
         <span>Customer Details</span>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="continue">
-        <button mat-raised-button color="primary" class="continue-btn" (click)="handleaddress()">CONTINUE</button>
+        <button mat-raised-button color="primary" class="continue-btn" (click)=" handleAddress()">CONTINUE</button>
       </div>
     </form>
   </div>
@@ -139,5 +139,4 @@
         <button mat-raised-button color="primary" class="continue-btn" (click)="handleOrder()">CHECKOUT</button>
       </div>
     </div>
-  </div>
-  
+  </div> -->
