--- a/src/app/components/cart/cart/cart.component.scss
+++ b/src/app/components/cart/cart/cart.component.scss
@@ -1,279 +1,214 @@
-.back-to-dashbaord a{
-    text-decoration: none;
-    padding:10%;
-    cursor: pointer;
+.cart-main-cnt{
+    // width:56.6%;
+    width: 65%;
+    // gap: 5px;
+    margin:auto;
 }
-.back-to-dashbaord {
-    padding: 2% 0% 1% 0%;
+.back-to-dashbaord{
+    margin: 17px 0px 15px 0px;
 }
-
 .cart-outer-cnt
 {
-    // display: flex;
-    // flex-wrap: wrap;
-    
-    height: fit-content;
-    width: 70%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    background-color: rgba(163, 163, 163, 0.066);
-    margin-left: 10%;
-    border-radius: 4px;
-    margin-bottom: 1.5%;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 1px;
+    width: calc(100% - 70px);
+    padding: 18px 35px;
+    // margin-bottom: 5px;
 }
 .count-cnt
 {
     display: flex;
-    align-items:center ;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 60%;
-}
-.count-cnt span b{
-    font-size: 20px;
+    width:100%;
+    margin-bottom: 39px;
+
 }
 .loc-icon-cnt{
-    padding: 5px;
-    height: 18%;
-    width: fit-content;
-    border: 1px solid;
+    width:35.5%;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 1px;
+    height: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-
 }
 .loc-icon
 {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    border: none;
-}
-.img-cnt
-{
-    height: 100%;
-    padding: 35px 35px 35px 50px;
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    align-items: end;
-}
-.content img{
-    height:80px;
-    display: flex;
-}
-.content
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    // border: 1px solid green;
-    width: 40%;
 }
 
-.booktitle
+.cart-inf-cnt
 {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-size: large;
-    font-weight: 500;
-    padding-bottom: 4px;
+    display: flex; 
+    flex-direction: row;
+    width:100%;
+    img{
+        width:8%;
+        height: 20%;
+    }
+    gap:40px;
+    align-items: flex-start;
 }
 .cart-detail{
-    padding-left: 29px;
-    // border: 1px solid red;   
-    width: 70%;
-}
-.rating-cnt{
-    padding-top: 7px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    .booktitle{
+        text-align: left;
+        font: normal normal normal 14px/17px Lato;
+        letter-spacing: 0px;
+        color: #0A0102;
+    }
+    .bookauthor{
+        text-align: left;
+        font: normal normal normal 10px/12px Lato;
+        letter-spacing: 0px;
+        color: #9D9D9D;
+    }
 }
 .originalprice
 {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    color: #616161;
+    text-align: left;
     text-decoration: line-through;
-    font-size: 80%;
-    font-weight: 100;
+    font: normal normal normal 9px/11px Lato;
+    letter-spacing: 0px;
+    color: #9D9D9D;
 }
 .sellingprice
 {
-    display: flex;
-    flex-wrap: wrap;
-    font-weight: bold;
-}
-.button
-{
-    // height: fit-content;
-    // border: 1px solid #df0a0a;  
-    display: flex;
-    justify-content: end; 
-    margin-right: 5%;
-   
+    text-align: left;
+    font: normal normal bold 15px/18px Lato;
+    letter-spacing: 0px;
+    color: #0A0102;
 }
 .count
 {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 45%;
-    padding: 14px 0px 0px 0px;
+    margin: 17px 0px 20px 0px ;
+    row-gap: 95px;
+    gap: 34px;
 }
+.symbol{
+    background: #FAFAFA 0% 0% no-repeat padding-box;
+    border: 1px solid #DBDBDB;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    padding: 3px 7px 5px 7px;
+}
+.countvalue{
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DBDBDB;
+    border-radius: 1px;
+    padding: 3px 16px 4px 15px;
+    margin: 0px 5px;
+    }
 .remove{
-    padding: 0% 0% 0% 190% ;
+    padding-left: 15%;
+    text-align: left;
+    font: normal normal normal 12px/15px Lato;
+    letter-spacing: 0px;
+    color: #0A0102;
     cursor: pointer;
 }
-.countvalue
-{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    height: 20px; 
-    width: 40px; 
-    padding-top: 3px;
+.place-order-btn{
+ display: flex;
+ justify-content: flex-end;
 }
-.symbol
-{
-    border: 1px solid black;
-    border-radius: 100%;
-    height: 24px; 
-    width: 24px; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
+//-----------------------------------------------------------------
 .bottom
 {
-    // height: 15%;
-    width: 67%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    // background-color: rgba(163, 163, 163, 0.066);
-    margin-left: 10%;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
     border-radius: 3px;
-    padding: 1% 0% 1% 3%;
+    width: calc(100% - 8%);
+    border: 1px solid rgba(130, 130, 130, 0.644);
+    border-radius: 3px;
     font-weight: bold;
-    margin-top: 1%;
-    display: flex;
-    align-items: center;
-    font-size: 20px;
+    padding: 2% 4%;
 }
 
-//-----------------------------
+// //-----------------------------
 .address-detail{
-    width: 70%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    margin-left: 10%;
-    height: fit-content;
-    border-radius: 3px;
-    // padding: 1% 0% 1% 0%;
-    margin-top: 1%;
-    // display: flex;
-    // align-items: center;
-    // font-size: 20px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 1px;
+    width: calc(100% - 70px);
+    padding: 18px 35px;
 }
-.address-header{
-font: normal normal medium 18px/24px Roboto;
-letter-spacing: 0px;
-color: #333232;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-flex-wrap: wrap;
-// border: 2px solid red;
-width: 100%;
-padding: 2% 0%;
- span{
-    font-size: 20px;
-    font-weight: 700;
-    padding-left: 4%;
- }
- button{
-    margin-right: 5%;
-    padding: 0px 30px;
-    border: 1px solid red;
-    border-radius: 5px;
- }
-}
-.address-main{
-   display: flex;
-//    border: 1px solid rgb(190, 190, 190) ;
-}
-.address-cnt textarea{
-    resize: none;
-    height: 60px;
-}
+.add-add{
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #A03037;
+    border-radius: 2px;
+    color: #A03037;
+    }
 .address-btn{
     display: flex;
-    // border: 2px solid green;
-    width: 40%;
     justify-content: end;
     align-items: end;
 }
 .address-btn button{
-
-    padding: 0% 2% 0% 2%;
-    height: fit-content;
     font-size: 10px;
 }
-.old-address{
-    padding: 0% 3% 2% 6%;
-    // border: 1px solid red;   
-    width: 50%;
+.remove-btn{
+    background: #a30404 0% 0% no-repeat padding-box;
+    border: 1px solid #A03037;
+    border-radius: 2px;
+    color: white;
+    margin: 0px 5px;
 }
 
+//====================================================
 .customer-address
 {
-    width: 70%;
+    width: 75%;
     height: fit-content;
     margin-left: 2%;
-    // border: 2px solid greenyellow;
+    gap: 55px;
+    margin-top: 2%;
 }
 .name-mobile-cnt
 {
     display: flex;
-    justify-content: space-around;
     margin-bottom: 2%;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
 
 }
 .field-cnt{
-    height: 100%;
-    width: 40%;
+    width: 47%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 7px;
     flex-wrap: wrap;
 
 }
-.ip{
-    width: 70%;
-    height: 25px;
- }
  .address-cnt
  {
- margin-left: 5%;
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-bottom: 2%;
  flex-wrap: wrap;
-
  }
- .address-ip
- {
-     width: 98%;
-     height: 80px;
-     resize: none;
+ .address-cnt textarea{
+    height: 84px;
+    width: 101.5%;
+    resize: none;
+
  }
  .city-town
  {
      display: flex;
-     justify-content: space-around;
+     justify-content: space-between;
      flex-wrap: wrap;
  }
  .value{
@@ -282,7 +217,6 @@ font: normal normal normal 12px/16px Roboto;
 letter-spacing: 0px;
 color: #0A0102;
 text-transform: capitalize;
-opacity: 1;
 font-size: 15px;
  }
  .input-cnt{
@@ -290,17 +224,16 @@ background: #FFFFFF 0% 0% no-repeat padding-box;
 border: 1px solid #acabab;
 border-radius: 2px;
 opacity: 1;
-padding: 4% 5%;
-width: 100%;
+padding: 0% 5%;
+width: 95%;
+height: 45px;
  }
  .type{
     width: 70%;
     margin-top: 3%;
-    margin-left: 5%;
 
  }
  .type-list{
-    // border: 1px solid green;
     display: flex;
     justify-content: space-between;
     margin-top: 2%;
@@ -312,10 +245,33 @@ width: 100%;
     justify-content: end;
     flex-wrap: wrap;
  }
- .continue-btn{
-    padding: 0.6% 5%;
-    margin-right: 5%;
-    background: #3371B5 0% 0% no-repeat padding-box;
-    border-radius: 3px;
-    opacity: 1;
- }
+ //-----------------
+//  .continue-btn{
+//     padding: 0% 5%;
+//     margin-right: 3%;
+//     background: #3371B5 0% 0% no-repeat padding-box;
+//  }
+//  .content-order
+// {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     // border: 1px solid green;
+//     width: 88%;
+//     padding: 3% 6%;
+//     img{
+//         height:80px;
+//         display: flex;
+//     }
+// }
+.cart-order-cnt
+{
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 1px;
+    width: calc(100% - 70px);
+    padding: 18px 35px;
+}
+.order-summary{
+    margin: 2% 0%;
+}
