--- a/src/app/components/login/login/login.component.scss
+++ b/src/app/components/login/login/login.component.scss
@@ -47,7 +47,8 @@
 .login-button {
     width: 100%;
     padding: 10px;
-    background-color: maroon;
+    background: #A03037 0% 0% no-repeat padding-box;
+    border-radius: 3px; 
     color: white;
     border: none;
     border-radius: 5px;
@@ -57,15 +58,25 @@
 
 .google-button,
 .facebook-button {
-    padding: 10px 20px;
-    background-color: #4285f4; /* Google Blue */
-    color: white;
+    padding: 10px 30px;
+    background: #4266B2 0% 0% no-repeat padding-box;
+    border-radius: 3px;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #FFFFFF;
     border: none;
-    font-size: 17px;
-    border-radius: 5px;
+    // font-size: 17px;
+    // border-radius: 5px;
     cursor: pointer;
 }
 
-.facebook-button {
-    background-color: #3b5998; /* Facebook Blue */
+.google-button {
+    background: #F5F5F5 0% 0% no-repeat padding-box;
+    border: 1px solid #E4E4E4;
+    border-radius: 3px;
+    text-align: left;
+    font: normal normal normal 12px/16px Roboto;
+    letter-spacing: 0px;
+    color: #0A0102;
 }
