--- a/src/app/components/orderList/orderlist/orderlist.component.scss
+++ b/src/app/components/orderList/orderlist/orderlist.component.scss
@@ -18,10 +18,11 @@
 .orderlist-cnt{
     height: fit-content;
     width: 65%;
-    border: 1px solid rgba(130, 130, 130, 0.644);
-    background-color: rgba(163, 163, 163, 0.066);
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #DCDCDC;
+    border-radius: 3px;
     margin-left: 10%;
-    border-radius: 4px;
+    // border-radius: 4px;
     margin-bottom: 1.5%;
 }
 .address-header{
