--- a/src/app/components/signin/signin/signin.component.scss
+++ b/src/app/components/signin/signin/signin.component.scss
@@ -5,25 +5,35 @@
     width: 100%;
     margin-top: 5%;
 }
-
+b{
+    font-size: small;
+}
 
 .input {
-    width: 300px;
+    width: 252px;
+    height: 30px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #E2E2E2;
+    border-radius: 2px;
     padding: 8px; 
     margin-bottom: 10px; 
-    border: 2px solid rgb(147, 143, 143);
-    border-radius: 5px; 
+    // border: 2px solid rgb(147, 143, 143);
+    // border-radius: 5px; 
 }
 
 .signup-button {
     width: 100%;
-    padding: 10px;
-    background-color: maroon;
-    color: white;
+    padding: 10px 0px 10px 110px;
+    text-align: left;
+    font: normal normal normal 15px/20px Roboto;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    background: #A03037 0% 0% no-repeat padding-box;
+    border-radius: 3px;     
     border: none;
-    border-radius: 5px;
+    // border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .mat-error {
